--- a/index.html
+++ b/index.html
@@ -4,67 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Workshop</title>
-    <style>
-        .test {
-
-        }
-    </style>
+    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
 <body>
-    <div class="test">
-        Hello
+    <div id="test">
+
     </div>
-    <section>
-        <!-- Navigation Bar -->
-        <header>
-            <p>Home</p>
-            <p>Contact Us</p>
-        </header>
-
-        <!-- heading -->
-        <div>
-            <h1>Build 3 Beginner Javascript Projects in 30 mins Tutorial - HTML, CSS & JS</h1>
-            <p>Web Development Industrial Training For Beginners</p>
+    <form class="col-4 mx-auto" onsubmit="return false;">
+        <div class="mb-3">
+          <label for="exampleInputEmail1" class="form-label">Email address</label>
+          <input type="text" class="form-control" id="exampleInputEmail1"  aria-describedby="emailHelp">
+          <div id="emailError" class="form-text"></div>
         </div>
-
-        <!-- User Info -->
-        <div>
-            <h2>User Info</h2>
+        <div class="mb-3">
+          <label for="exampleInputPassword1" class="form-label">Password</label>
+          <input type="password" class="form-control" id="exampleInputPassword1">
+          <div id="passwordError" class="form-text"></div>
         </div>
-    
-        <!-- Content -->
-        <div>
-            <h2>Content</h2>
-            <div>
-                <h3>Section 1</h3>
-                <img src="https://www.htmlhints.com/image/shareYT/maxresdefault.jpeg" alt="content">
-                <p>What's good everyone! Today we're going to build 3 super easy beginner Javascript projects in 30 mins. All you need to know is some basic HTML, CSS, and JS. Let me know if I should make more complicated projects?</p>
-            </div>
-            <div>
-                <h3>Section 2</h3>
-                <img src="https://www.htmlhints.com/image/shareYT/maxresdefault.jpeg" alt="content">
-                <p>What's good everyone! Today we're going to build 3 super easy beginner Javascript projects in 30 mins. All you need to know is some basic HTML, CSS, and JS. Let me know if I should make more complicated projects?</p>
-            </div>
-        </div>
+        <!-- <div class="mb-3 form-check">
+          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+          <label class="form-check-label" for="exampleCheck1">Check me out</label>
+        </div> -->
+        <button type="submit" class="btn btn-primary" id="submit">Submit</button>
+      </form>
+    <script src="./script.js">
         
-        <!-- Video -->
-        <div>
-            <h2>Youtube Video</h2>
-        </div>
-
-        <footer>
-            This is my footer
-        </footer>
-    </section>
-    <script>
-        var arr = [1,2,3,3,2,4,5];
-        var j = arr.filter((ele, pos) => {
-            if(arr.indexOf(ele) !== pos) {
-                return true;
-            }
-        });
-        console.log(j);
     </script>
 </body>
 </html>
